# FlareScript

./: CONTRIBUTING.md  GOVERNANCE.md  README.md
contracts/: Cargo.toml
contracts/src/: ast.rs  compiler.rs  evm_backend.rs  grammar.pest  lexer.rs  lib.rs  main.rs  parser.rs  wasm_backend.rs
contracts/tests/: contract_tests.rs
