[package]
name = "flarescript_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.13"
pest_derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
thiserror = "1.0"
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0"
